--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 /Keystrokes*
 hd.sh
+hd_i.sh
 slurm*
 wandb
 /checkpoints*
@@ -14,3 +15,4 @@ wandb
 .DS_Store*
 /benchmark*
 /not_benchmark*
+/KeyDatasets
